# ros-study-journey

./: README.md
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: ekf.yaml
src/robot_bringup/launch/: bringup.launch  ekf.launch  follow.launch  navigation.launch  slam.launch
src/robot_bringup/scripts/: laser_follower.py  nav_start.sh  save_map.sh  send_goals.py  serial_bridge.py  slam_start.sh
src/robot_bringup/urdf/: robot.urdf
src/robot_sim/: CMakeLists.txt  package.xml
src/robot_sim/config/: sim_goals.yaml
src/robot_sim/launch/: sim_navigation.launch  sim_slam.launch  simulation.launch
src/robot_sim/scripts/: sim_follow.sh  sim_navigation.sh  sim_slam.sh  wheel_controller.py
src/robot_sim/urdf/: robot_sim.urdf
src/robot_sim/worlds/: room.world
