<?xml version="1.0"?>
<package format="2">
  <name>robot_sim</name>
  <version>1.0.0</version>
  <description>Gazebo 仿真包: 两轮差速机器人仿真环境 (SLAM + 导航)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>

  <export>
  </export>
</package>
